# n4n5-crate

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  release.yml  tests.yml
n4n5-share/: Cargo.toml  README.md
n4n5-share/src/: lib.rs  main.rs  share.rs
src/: cli.rs  config.rs  errors.rs  lib.rs  macros.rs  main.rs  utils.rs
src/commands/: config.rs  helpers.rs  list_crates.rs  man.rs  mod.rs  movies.rs  music.rs  settings.rs  shortcuts.rs  sync.rs  watching.rs
src/commands/gh/: lib.rs  mod.rs  types.rs
src/commands/shortcuts/: mod.rs  sync.rs
src/commands/utils/: lib.rs  list_crates.rs  mod.rs  music.rs  share.rs  types.rs
