[package]
name = "n4n5"
version = "1.5.7"
edition = "2024"
description = "n4n5's utility crate"
documentation = "https://docs.rs/n4n5"
license = "MIT"
readme = "./README.md"
keywords = ["utility"]
categories = ["command-line-utilities"]
repository = "https://github.com/Its-Just-Nans/n4n5-crate"
homepage = "https://github.com/Its-Just-Nans/n4n5-crate"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
env_logger = "0.11"
home = "0.5.12"
log = "0.4"
music-exporter = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.48"
toml = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
clap_complete = "4.5"
clap_mangen = "0.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
pngtools = { version = "1.1.0", optional = true }
galion = { version = "0.7.8", optional = true }
git-mover = { version = "1.2.1", optional = true }

[features]
default = ["pngtools", "git-mover", "galion"]
pngtools = ["dep:pngtools"]
git-mover = ["dep:git-mover"]
galion = ["dep:galion"]
