[package]
name = "n4n5"
version = "1.6.7"
edition = "2024"
description = "n4n5's utility crate"
documentation = "https://docs.rs/n4n5"
license = "MIT"
readme = "./README.md"
keywords = ["utility"]
categories = ["command-line-utilities"]
repository = "https://github.com/Its-Just-Nans/n4n5-crate"
homepage = "https://github.com/Its-Just-Nans/n4n5-crate"

[dependencies]
clap = { version = "4.6", features = ["cargo", "derive"] }
env_logger = "0.11"
home = "0.5.12"
log = "0.4"
music-exporter = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
toml = "1.1"
clap_complete = "4.6"
clap_mangen = "0.3"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
pngtools = { version = "1.1.0", optional = true }
galion = { version = "0.7.8", optional = true }
git-mover = { version = "1.2.3", optional = true }
axum = { version = "0.8.9", features = ["multipart"] }
mime_guess = "2.0.5"

[features]
default = ["git-mover"]
pngtools = ["dep:pngtools"]
git-mover = ["dep:git-mover"]
galion = ["dep:galion"]
